Fixed overflow issue by resetting the page.

--- a/google_homepage/style.css
+++ b/google_homepage/style.css
@@ -1,5 +1,7 @@
 html, body {
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .doc-body {
@@ -88,8 +90,6 @@ li img {
   background-image: -moz-linear-gradient(top, #f5f5f5, #f1f1f1);
   background-color: #f2f2f2;
   border: 1px solid #f2f2f2;
-  margin: -8px;
-  overflow: hidden;
 }
 
 .top-footer {
